--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -24,9 +24,9 @@ jobs:
           const fs = require('fs');
           const path = require('path');
           const screenshots = fs.readdirSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots'), 'utf8');
-          console.log(context, dir);
+          console.log(context, screenshots);
           return Promise.all(screenshots.map(screenshot => {
-            const base64 = fs.readFileSync('encoded_image.txt', 'utf8');
+            const base64 = fs.readFileSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots', screenshot), 'utf8');
             return github.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
