--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,5 +1,5 @@
 name: Haiku Snapshot
-on: [push]
+on: [push, pull_request]
 jobs:
   take-screenshot:
     runs-on: ubuntu-latest
@@ -24,10 +24,16 @@ jobs:
           const fs = require('fs');
           const path = require('path');
           const screenshots = fs.readdirSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots'), 'utf8');
-          console.log(context, screenshots, github);
+          console.log(context.payload, screenshots, github);
           return Promise.all(screenshots.map(screenshot => {
             const base64 = fs.readFileSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots', screenshot), 'utf8');
-            return github.rest.issues.createComment({
+            github.rest.pulls.createReview({
+              owner: context.payload.repository.owner.name,
+              repo: context.payload.repository.name,
+              pull_number: pullNumber,
+              event: 'COMMENT'
+            })
+            return github.rest.pulls.create({
               issue_number: context.payload.head_commit.id,
               body: `![Generated Image](data:image/png;base64,${base64})`
             });
