--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,5 +1,6 @@
 name: Haiku Snapshot
-on: [push, pull_request]
+on:
+  pull_request: write
 jobs:
   take-screenshot:
     runs-on: ubuntu-latest
@@ -27,11 +28,10 @@ jobs:
           console.log(context, screenshots);
           return Promise.all(screenshots.map(screenshot => {
             const base64 = fs.readFileSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots', screenshot)).toString('base64');
-            return github.rest.pulls.createReview({
+            return github.rest.issues.createComment({
               owner: context.payload.repository.owner.name,
               repo: context.payload.repository.name,
-              pull_number: context.payload.head_commit.id,
+              issue_number: context.payload.head_commit.id,
               body: `![Generated Image](data:image/png;base64,${base64})`,
-              event: 'COMMENT'
             })
           }));
