--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -24,13 +24,13 @@ jobs:
           const fs = require('fs');
           const path = require('path');
           const screenshots = fs.readdirSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots'), 'utf8');
-          console.log(context, screenshots);
+          console.log(context.issue, screenshots);
           return Promise.all(screenshots.map(screenshot => {
             const base64 = fs.readFileSync(path.join(process.env.GITHUB_WORKSPACE, 'screenshots', screenshot)).toString('base64');
             return github.rest.issues.createComment({
-              owner: context.payload.repository.owner.name,
-              repo: context.payload.repository.name,
-              issue_number: context.payload.head_commit.id,
+              owner: context.repo.owner,
+              repo: context.repo.name,
+              issue_number: context.issue.number,
               body: `![Generated Image](data:image/png;base64,${base64})`,
             })
           }));
