--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -32,6 +32,6 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `![Generated Image](data:image/png;base64,${base64})`,
+              body: `<img src="data:image/png;base64,${base64}">`,
             })
           }));
