--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "stripe": "^8.174.0",
     "mongodb": "^4.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC"
