--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "stripe": "^8.174.0",
-    "mongodb": "^4.2.0"
+    "mongodb": "^4.2.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "jest": "^26.6.3",
