--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -15,3 +15,5 @@ jobs:
         run: npm install
       - name: Run Tests
         run: npm test
+        env:
+          NETLIFY_PREVIEW_URL: ${{ secrets.NETLIFY_PREVIEW_URL }}
