--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -13,7 +13,8 @@ jobs:
           node-version: '16'
       - name: Install Dependencies
         run: npm install
+      - uses: archiewood/wait-for-netlify-action@v1
       - name: Run Tests
         run: npm test
         env:
-          NETLIFY_PREVIEW_URL: ${{ secrets.NETLIFY_PREVIEW_URL }}
+          NETLIFY_PREVIEW_URL: ${{ steps.wait-for-netflify-preview.outputs.url }}
