Fix typo in Netlify Preview step

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -13,7 +13,11 @@ jobs:
           node-version: '16'
       - name: Install Dependencies
         run: npm install
-      - uses: archiewood/wait-for-netlify-action@v1
+      - name: Waiting for 200 from the Netlify Preview
+        uses: archiewood/wait-for-netlify-action@v1
+        id: wait-for-netflify-preview
+        with:
+          site_name: "haikugpt"
       - name: Run Tests
         run: npm test
         env:
