--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -15,10 +15,18 @@ jobs:
         run: npm install
       - name: Waiting for 200 from the Netlify Preview
         uses: rphansen91/wait-for-netlify-action@v1.0.1
-        id: wait-for-netflify-preview
+        id: wait-for-netlify-preview
         with:
           site_name: "haikugpt"
+          timeout: 600 # Increased timeout to 600 seconds
+      - name: Check Netlify Preview Status
+        run: |
+          echo "Checking Netlify Preview Status"
+          echo "$NETLIFY_PREVIEW_URL"
+          curl -v ${{ steps.wait-for-netlify-preview.outputs.url }}
+        env:
+          NETLIFY_PREVIEW_URL: ${{ steps.wait-for-netlify-preview.outputs.url }}
       - name: Run Tests
         run: npm test
         env:
-          NETLIFY_PREVIEW_URL: ${{ steps.wait-for-netflify-preview.outputs.url }}
+          NETLIFY_PREVIEW_URL: ${{ steps.wait-for-netlify-preview.outputs.url }}
